Thumbnail paging fix.

--- a/web/uv-config.json
+++ b/web/uv-config.json
@@ -6,7 +6,7 @@
     "leftPanelEnabled": true,
     "limitLocales": false,
     "overrideFullScreen": false,
-    "pagingEnabled": true,
+    "pagingEnabled": false,
     "rightPanelEnabled": true
   },
   "modules": {
